# machine-learning

./: CMakeLists.txt  README.md
include/mlcpp/: dataset.hpp  linear_regression.hpp  logistic_regression.hpp  matrix.hpp  neural_network.hpp
src/: CMakeLists.txt  dataset.cpp  linear_regression.cpp  logistic_regression.cpp  matrix.cpp  neural_network.cpp
tests/: CMakeLists.txt  test_matrix.cpp
